syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

message CustomerChangeDataItem {
    string Key = 1;
    string Value = 2;
}

message CustomerChangeDataItemWrapper {
    repeated CustomerChangeDataItem ChangeData = 3;
}